tweak: Ensure active detour details visible on mobile

--- a/assets/css/_diversion_page.scss
+++ b/assets/css/_diversion_page.scss
@@ -2,6 +2,7 @@
 
 .l-diversion-page {
   display: grid;
+  overflow-y: auto;
   // Default layout is linear
   grid-template:
     "heading" min-content
@@ -74,6 +75,9 @@
   &__scroll-area {
     flex: 1 1 0;
     overflow-y: auto;
+    @include media-breakpoint-down(md) {
+      flex: 1;
+    }
   }
 }
 
